# gstreamer-vaapi

./: autogen.sh  configure.ac
ext/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/gst/vaapi/: Makefile.am  gstvaapicodedbufferproxy.c  gstvaapicodedbufferproxy.h  gstvaapicompat.h  gstvaapicontext.c  gstvaapicontext.h  gstvaapidecoder_h264.c  gstvaapidecoder_h265.c  gstvaapidecoder_jpeg.c  gstvaapidecoder_mpeg2.c  gstvaapidecoder_mpeg4.c  gstvaapidecoder_vc1.c  gstvaapidecoder_vp8.c  gstvaapidisplay.c  gstvaapidisplay_wayland.c  gstvaapiencoder.c  gstvaapiencoder_h264_fei.c  gstvaapiencoder_h264_fei.h  gstvaapifei_objects.c  gstvaapifei_objects.h  gstvaapifei_objects_priv.h  gstvaapifeienc_h264.c  gstvaapifeienc_h264.h  gstvaapifeipak_h264.c  gstvaapifeipak_h264.h  gstvaapifeiutils_h264.c  gstvaapifeiutils_h264.h  gstvaapiprofile.c  gstvaapiprofile.h  gstvaapisurfaceproxy.c  gstvaapiutils_h264.c  gstvaapiutils_mpeg2.c  gstvaapiwindow_wayland.c  gstvaapiwindow_wayland.h
gst/vaapi/: Makefile.am  gstvaapi.c  gstvaapidecode.c  gstvaapiencode.c  gstvaapiencode.h  gstvaapiencode_h264_fei.c  gstvaapifeivideometa.c  gstvaapifeivideometa.h  gstvaapipluginbase.c  gstvaapipluginutil.c  gstvaapisink.c  gstvaapisink.h  gstvaapivideometa_texture.c
tests/: Makefile.am  test-display.c  test-fei-enc-in.c  test-fei-enc-input.c  test-fei-enc-out.c
